# InsightFlow

./: .env.example  .gitignore  LICENSE  README.md  prompts.yaml  pyproject.toml  requirements.txt
src/insightflow/: __init__.py  list_models.py  main.py
src/insightflow/core/: analyzer.py  config.py  downloader.py  ingestor.py  registry.py
